--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "run-p start-compile start-run",
     "start-compile": "tsc --watch",
-    "start-run": "browser-sync start --server -w",
-    "build": "tsc"
+    "start-run": "browser-sync start --server -w --folder dist",
+    "start-static": "onchange 'index.html' 'assets/*' -- run-s copy",
+    "copy": "cp index.html dist/ & cp -r assets dist/",
+    "build": "tsc & run-s copy"
   },
   "homepage": "https://github.com/Gaweph/p5-typescript-starter#readme",
   "devDependencies": {
     "@types/p5": "^1.3.3",
     "browser-sync": "^2.26.12",
     "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
     "typescript": "^3.8.3"
   }
 }
