--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start-compile": "tsc --watch",
     "start-run": "browser-sync start --server -w --folder dist",
     "start-static": "onchange 'index.html' 'assets/*' -- run-s copy",
-    "copy": "cp index.html dist/ & cp -r assets dist/",
-    "build": "tsc & run-s copy"
+    "copy": "cp index.html dist/ & cp -r assets dist/assets",
+    "build": "mkdir -p dist & tsc & npm run copy"
   },
   "homepage": "https://github.com/Gaweph/p5-typescript-starter#readme",
   "devDependencies": {
