--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "run-p start-compile start-run",
     "start-compile": "tsc --watch",
-    "start-run": "browser-sync start --server -w --folder dist",
+    "start-run": "browser-sync start --server -w --ss dist",
     "start-static": "onchange 'index.html' 'assets/*' -- run-s copy",
     "copy": "cp index.html dist/ & cp -r assets dist/assets",
     "build": "mkdir -p dist && tsc && npm run copy && run-s log-dist",
