--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
+		"@poppanator/sveltekit-svg": "^5.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-netlify": "^4.3.6",
 		"@sveltejs/kit": "^2.0.0",
@@ -36,6 +37,7 @@
 	"dependencies": {
 		"@libsql/client": "^0.9.0",
 		"@types/p5": "^1.7.6",
-		"drizzle-orm": "^0.33.0"
+		"drizzle-orm": "^0.33.0",
+		"normalize.css": "^8.0.1"
 	}
 }
