add linux package

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"normalize.css": "^8.0.1"
 	},
 	"optionalDependencies": {
+		"@esbuild/linux-x64": "^0.24.0",
 		"@rollup/rollup-linux-x64-gnu": "^4.27.3"
 	}
 }
