--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
 		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
-		"@poppanator/sveltekit-svg": "^5.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-netlify": "^4.3.6",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
-		"drizzle-kit": "^0.22.0",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -40,7 +38,8 @@
 	"dependencies": {
 		"@types/p5": "^1.7.6",
 		"lowdb": "^7.0.1",
-		"normalize.css": "^8.0.1"
+		"normalize.css": "^8.0.1",
+		"storyblok-js-client": "^6.10.3"
 	},
 	"optionalDependencies": {
 		"@esbuild/linux-x64": "^0.24.0",
