--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@2toad/profanity": "^3.0.1",
 		"@types/p5": "^1.7.6",
 		"lowdb": "^7.0.1",
 		"normalize.css": "^8.0.1",
